hphp/hack/test/typecheck/trait_extends_bad.php.exp
File "trait_extends_bad.php", line 5, characters 11-16:
Only interfaces and classes may extend other interfaces and classes. (Parsing[1002])
