hphp/hack/test/typecheck/trait_extends_bad.php
<?hh // partial

class Bar {}

trait Foo extends Bar {}
